logs/ydown.log
Listing '.'...
Listing './bin'...
Compiling './bin/ydatalibExample.py'...
***   File "./bin/ydatalibExample.py", line 7
    print "TITLE"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ydownlibExample.py'...
***   File "./bin/ydownlibExample.py", line 9
    print video.getTitle()
              ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ydown'...
Listing './lib/python3.5/site-packages/ydown/test'...
Compiling './lib/python3.5/site-packages/ydown/test/ydatalibExample.py'...
***   File "./lib/python3.5/site-packages/ydown/test/ydatalibExample.py", line 7
    print "TITLE"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ydown/test/ydownlibExample.py'...
***   File "./lib/python3.5/site-packages/ydown/test/ydownlibExample.py", line 9
    print video.getTitle()
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ydown/ydownlib.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (ydownlib.py, line 15)
Listing './lib/python3.5/site-packages/ydown-2.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
